Allow to preserve all color with one class when using uk-svg

--- a/src/less/components/utility.less
+++ b/src/less/components/utility.less
@@ -364,8 +364,8 @@
 /* 1 */
 .uk-svg,
 /* 2 */
-.uk-svg [fill*='#']:not(.uk-preserve) { fill: currentcolor; }
-.uk-svg [stroke*='#']:not(.uk-preserve) { stroke: currentcolor; }
+.uk-svg:not(.uk-preserve) [fill*='#']:not(.uk-preserve) { fill: currentcolor; }
+.uk-svg:not(.uk-preserve) [stroke*='#']:not(.uk-preserve) { stroke: currentcolor; }
 
 /*
  * Fix Firefox blurry SVG rendering: https://bugzilla.mozilla.org/show_bug.cgi?id=1046835
