removed svgs from dist folder

--- a/src/less/components/close.less
+++ b/src/less/components/close.less
@@ -12,8 +12,8 @@
 @close-color:                                   @global-muted-color;
 @close-hover-color:                             @global-color;
 
-@internal-close-image:                          "../../../dist/images/close.svg";
-@internal-close-large-image:                    "../../../dist/images/close-large.svg";
+@internal-close-image:                          "../../images/components/close.svg";
+@internal-close-large-image:                    "../../images/components/close-large.svg";
 
 
 /* ========================================================================
