--- a/src/less/components/divider.less
+++ b/src/less/components/divider.less
@@ -20,7 +20,7 @@
 @divider-icon-line-border-width:                @global-border-width;
 @divider-icon-line-border:                      @global-border;
 
-@internal-divider-icon-image:                   "../../../dist/images/divider-icon.svg";
+@internal-divider-icon-image:                   "../../images/backgrounds/divider-icon.svg";
 
 @divider-small-width:                           100px;
 @divider-small-border-width:                    @global-border-width;
