--- a/src/less/components/form.less
+++ b/src/less/components/form.less
@@ -97,10 +97,10 @@
 @form-icon-color:                               @global-muted-color;
 @form-icon-hover-color:                         @global-color;
 
-@internal-form-select-image:                     "../../../dist/images/form-select.svg";
-@internal-form-radio-image:                      "../../../dist/images/form-radio.svg";
-@internal-form-checkbox-image:                   "../../../dist/images/form-checkbox.svg";
-@internal-form-checkbox-indeterminate-image:     "../../../dist/images/form-checkbox-indeterminate.svg";
+@internal-form-select-image:                     "../../images/backgrounds/form-select.svg";
+@internal-form-radio-image:                      "../../images/backgrounds/form-radio.svg";
+@internal-form-checkbox-image:                   "../../images/backgrounds/form-checkbox.svg";
+@internal-form-checkbox-indeterminate-image:     "../../images/backgrounds/form-checkbox-indeterminate.svg";
 
 
 /* ========================================================================
