--- a/src/less/components/list.less
+++ b/src/less/components/list.less
@@ -36,7 +36,7 @@
 @list-large-striped-padding-vertical:           @global-margin;
 @list-large-striped-padding-horizontal:         @global-small-margin;
 
-@internal-list-bullet-image:                    "../../../dist/images/list-bullet.svg";
+@internal-list-bullet-image:                    "../../images/backgrounds/list-bullet.svg";
 
 
 /* ========================================================================
