--- a/src/less/components/nav.less
+++ b/src/less/components/nav.less
@@ -63,8 +63,8 @@
 @nav-primary-sublist-item-color:                @global-muted-color;
 @nav-primary-sublist-item-hover-color:          @global-color;
 
-@internal-nav-parent-close-image:               "../../../dist/images/nav-parent-close.svg";
-@internal-nav-parent-open-image:                "../../../dist/images/nav-parent-open.svg";
+@internal-nav-parent-close-image:               "../../images/backgrounds/nav-parent-close.svg";
+@internal-nav-parent-open-image:                "../../images/backgrounds/nav-parent-open.svg";
 
 
 /* ========================================================================
