--- a/src/less/components/overlay.less
+++ b/src/less/components/overlay.less
@@ -22,7 +22,7 @@
 @overlay-primary-background:                    fade(@global-secondary-background, 80%);
 @overlay-primary-color-mode:                    light;
 
-@internal-overlay-image:                        "../../../dist/images/overlay.svg";
+@internal-overlay-image:                        "../../images/components/overlay.svg";
 
 
 /* ========================================================================
