--- a/src/less/components/search.less
+++ b/src/less/components/search.less
@@ -48,9 +48,9 @@
 @search-toggle-color:                               @global-muted-color;
 @search-toggle-hover-color:                         @global-color;
 
-@internal-search-default-image:                     "../../../dist/images/search-default.svg";
-@internal-search-navbar-image:                      "../../../dist/images/search-navbar.svg";
-@internal-search-large-image:                       "../../../dist/images/search-large.svg";
+@internal-search-default-image:                     "../../images/components/search-default.svg";
+@internal-search-navbar-image:                      "../../images/components/search-navbar.svg";
+@internal-search-large-image:                       "../../images/components/search-large.svg";
 
 
 /* ========================================================================
