--- a/src/less/components/slidenav.less
+++ b/src/less/components/slidenav.less
@@ -21,10 +21,10 @@
 
 @slidenav-active-color:                         fadeout(@global-color, 10%);
 
-@internal-slidenav-previous-image:              "../../../dist/images/slidenav-previous.svg";
-@internal-slidenav-next-image:                  "../../../dist/images/slidenav-next.svg";
-@internal-slidenav-large-previous-image:        "../../../dist/images/slidenav-large-previous.svg";
-@internal-slidenav-large-next-image:            "../../../dist/images/slidenav-large-next.svg";
+@internal-slidenav-previous-image:              "../../images/components/slidenav-previous.svg";
+@internal-slidenav-next-image:                  "../../images/components/slidenav-next.svg";
+@internal-slidenav-large-previous-image:        "../../images/components/slidenav-large-previous.svg";
+@internal-slidenav-large-next-image:            "../../images/components/slidenav-large-next.svg";
 
 
 /* ========================================================================
