--- a/src/less/components/spinner.less
+++ b/src/less/components/spinner.less
@@ -15,7 +15,7 @@
 @spinner-circumference:                         round(2 * 3.141 * @spinner-radius);
 @spinner-duration:                              1.4s;
 
-@internal-spinner-image:                        "../../../dist/images/spinner.svg";
+@internal-spinner-image:                        "../../images/components/spinner.svg";
 
 
 /* ========================================================================
