--- a/src/less/components/totop.less
+++ b/src/less/components/totop.less
@@ -16,7 +16,7 @@
 
 @totop-active-color:                            @global-emphasis-color;
 
-@internal-totop-image:                          "../../../dist/images/totop.svg";
+@internal-totop-image:                          "../../images/components/totop.svg";
 
 
 /* ========================================================================
