--- a/src/less/theme/accordion.less
+++ b/src/less/theme/accordion.less
@@ -12,8 +12,8 @@
 //
 
 @accordion-icon-color:                         @global-color;
-@internal-accordion-open-image:                "../../../dist/images/accordion-open.svg";
-@internal-accordion-close-image:               "../../../dist/images/accordion-close.svg";
+@internal-accordion-open-image:                "../../images/backgrounds/accordion-open.svg";
+@internal-accordion-close-image:               "../../images/backgrounds/accordion-close.svg";
 
 // Component
 // ========================================================================
