--- a/src/less/components/navbar.less
+++ b/src/less/components/navbar.less
@@ -77,7 +77,7 @@
 @navbar-dropbar-background:                     @navbar-dropdown-background;
 @navbar-dropbar-z-index:                        @global-z-index + 20;
 
-@internal-navbar-toggle-image:                  "../../../dist/images/navbar-toggle.svg";
+@internal-navbar-toggle-image:                  "../../images/components/navbar-toggle.svg";
 
 
 /* ========================================================================
@@ -173,7 +173,7 @@
 
 /* 4 */
 .uk-navbar-center-left,
-.uk-navbar-center-right { 
+.uk-navbar-center-right {
    position: absolute;
    top: 0;
 }
