--- a/src/less/components/pagination.less
+++ b/src/less/components/pagination.less
@@ -23,8 +23,8 @@
 @pagination-item-active-color:                  @global-color;
 @pagination-item-disabled-color:                @global-muted-color;
 
-@internal-pagination-next-image:                "../../../dist/images/pagination-next.svg";
-@internal-pagination-previous-image:            "../../../dist/images/pagination-previous.svg";
+@internal-pagination-next-image:                "../../images/components/pagination-next.svg";
+@internal-pagination-previous-image:            "../../images/components/pagination-previous.svg";
 
 
 /* ========================================================================
