--- a/src/less/components/card.less
+++ b/src/less/components/card.less
@@ -14,6 +14,7 @@
 //                  `uk-card-default`
 //                  `uk-card-primary`
 //                  `uk-card-secondary`
+//                  `uk-card-small`
 //                  `uk-card-large`
 //
 // Uses:            `uk-grid-stack`
