--- a/src/less/components/position.less
+++ b/src/less/components/position.less
@@ -9,8 +9,10 @@
 //                  `uk-position-left`
 //                  `uk-position-right`
 //                  `uk-position-top-left`
+//                  `uk-position-top-center`
 //                  `uk-position-top-right`
 //                  `uk-position-bottom-left`
+//                  `uk-position-bottom-center`
 //                  `uk-position-bottom-right`
 //                  `uk-position-center`
 //                  `uk-position-center-left`
