--- a/src/less/components/transition.less
+++ b/src/less/components/transition.less
@@ -39,19 +39,17 @@
  ========================================================================== */
 
 /*
- * 1. Switches on the hardware compositing mode from the beginning to assure a smooth transition when hovering.
- *
+ * Using multiple selectors to exclude `uk-transition-toggle`
  * Note: Transitions don't work with `uk-postion-center-*` classes because they also use `transform`
  *       Just put the transition in an extra `div`
  */
 
-[class*='uk-transition-']:not(.uk-transition-toggle) {
+.uk-transition-fade,
+[class*='uk-transition-scale'],
+[class*='uk-transition-slide'] {
     transition-duration: @transition-duration;
     transition-timing-function: ease-out;
     transition-property: opacity, transform, filter;
-    /* 1 */
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
 }
 
 /*
