Add text primary hook

--- a/src/less/theme/text.less
+++ b/src/less/theme/text.less
@@ -40,6 +40,12 @@
 .hook-text-large() {}
 
 
+// Color modifiers
+// ========================================================================
+
+.hook-text-primary() {}
+
+
 // Miscellaneous
 // ========================================================================
 
@@ -51,3 +57,4 @@
 
 .hook-inverse-text-lead() {}
 .hook-inverse-text-meta() {}
+.hook-inverse-text-primary() {}
