--- a/src/less/theme/heading.less
+++ b/src/less/theme/heading.less
@@ -14,6 +14,12 @@
 .hook-heading-primary() {}
 
 
+// Hero
+// ========================================================================
+
+.hook-heading-hero() {}
+
+
 // Divider
 // ========================================================================
 
@@ -43,6 +49,8 @@
 // ========================================================================
 
 .hook-inverse-heading-primary() {}
+
+.hook-inverse-heading-hero() {}
 
 .hook-inverse-heading-divider() {}
 
