--- a/src/less/components/slideshow.less
+++ b/src/less/components/slideshow.less
@@ -1,12 +1,20 @@
 .uk-slideshow-slides {
     position: relative;
+    z-index: 0;
+    margin: 0;
+    padding: 0;
+    list-style: none;
     overflow: hidden;
+    touch-action: pan-y;
 }
 
 .uk-slideshow-slides > * {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    background-position: 50% 50%;
+    background-size: cover;
     user-select: none;
     visibility: hidden;
 }
