fix heading line

--- a/src/less/components/heading.less
+++ b/src/less/components/heading.less
@@ -38,9 +38,9 @@
 @heading-bullet-border-width:                   5px;
 @heading-bullet-border:                         @global-border;
 
-@heading-line-height:                           @heading-line-border-width;
 @heading-line-border-width:                     @global-border-width;
 @heading-line-border:                           @global-border;
+@heading-line-height:                           @heading-line-border-width;
 @heading-line-margin-horizontal:                0.6em;
 
 
@@ -165,7 +165,7 @@
     content: "";
     /* 1 */
     position: absolute;
-    top: ~'calc(50% + (@{heading-line-height} / 2))';
+    top: ~'calc(50% - (@{heading-line-height} / 2))';
     /* 2 */
     width: 2000px;
     /* 3 */
