--- a/src/less/components/notification.less
+++ b/src/less/components/notification.less
@@ -28,7 +28,7 @@
 @notification-width:                                  350px;
 
 @notification-message-margin-bottom:                  10px;
-@notification-message-padding:                        @global-small-gutter;;
+@notification-message-padding:                        @global-small-gutter;
 @notification-message-background:                     @global-muted-background;
 @notification-message-color:                          @global-color;
 @notification-message-font-size:                      @global-medium-font-size;
