--- a/src/less/theme/base.less
+++ b/src/less/theme/base.less
@@ -116,7 +116,7 @@
 .hook-inverse-base-link-hover() {}
 
 .hook-inverse-base-code() {
-    background: @inverse-global-muted-background;;
+    background: @inverse-global-muted-background;
 }
 
 .hook-inverse-base-heading() {}
