--- a/src/less/theme/text.less
+++ b/src/less/theme/text.less
@@ -40,10 +40,10 @@
 .hook-text-large() {}
 
 
-// Color modifiers
+// Background modifier
 // ========================================================================
 
-.hook-text-primary() {}
+.hook-text-background() {}
 
 
 // Miscellaneous
@@ -57,4 +57,3 @@
 
 .hook-inverse-text-lead() {}
 .hook-inverse-text-meta() {}
-.hook-inverse-text-primary() {}
