--- a/src/less/components/text.less
+++ b/src/less/components/text.less
@@ -221,7 +221,7 @@ td.uk-text-break { word-break: break-all; }
 .hook-text-meta() {}
 .hook-text-small() {}
 .hook-text-large() {}
-.hook-text-primary() {}
+.hook-text-background() {}
 .hook-text-misc() {}
 
 
