--- a/src/less/components/text.less
+++ b/src/less/components/text.less
@@ -29,7 +29,7 @@
 @text-warning-color:                            @global-warning-background;
 @text-danger-color:                             @global-danger-background;
 
-@text-background-color:                         @global-color;
+@text-background-color:                         @global-primary-background;
 
 
 /* ========================================================================
