update sticky behaviour

--- a/src/less/components/sticky.less
+++ b/src/less/components/sticky.less
@@ -3,6 +3,8 @@
 //
 // Component:       `uk-sticky`
 //
+// Modifier:        `uk-sticky-fixed`
+//
 // States:          `uk-active`
 //
 // ========================================================================
@@ -25,7 +27,7 @@
  * 1. Resolve frame rate issues on devices with lower frame rates by forcing hardware acceleration
  */
 
-.uk-sticky.uk-active {
+.uk-sticky-fixed {
     z-index: @sticky-z-index;
     box-sizing: border-box;
     margin: 0 !important;
