added text background default color

--- a/src/less/components/text.less
+++ b/src/less/components/text.less
@@ -103,6 +103,7 @@
  *    Default color is set to transparent
  * 2. Container fits the text
  * 3. Fallback color for IE11
+ * 4. Fallback if no background-image is set
  */
 
 .uk-text-background {
@@ -112,7 +113,9 @@
     /* 2 */
     display: inline-block;
     /* 3 */
-    color: @text-background-color !important;;
+    color: @text-background-color !important;
+    /* 4 */
+    background-color: @text-background-color;
     .hook-text-background;
 }
 
