--- a/src/less/components/background.less
+++ b/src/less/components/background.less
@@ -9,7 +9,7 @@
 // Variables
 // ========================================================================
 
-@background-background:                         @global-background;
+@background-default-background:                 @global-background;
 @background-muted-background:                   @global-muted-background;
 @background-primary-background:                 @global-primary-background;
 @background-secondary-background:               @global-secondary-background;
@@ -23,7 +23,7 @@
 /* Color
  ========================================================================== */
 
-.uk-background { background-color: @background-background; }
+.uk-background-default { background-color: @background-default-background; }
 .uk-background-muted { background-color: @background-muted-background; }
 .uk-background-primary { background-color: @background-primary-background; }
 .uk-background-secondary { background-color: @background-secondary-background; }
