auto-toggle animation classes

--- a/src/less/components/slideshow.less
+++ b/src/less/components/slideshow.less
@@ -28,6 +28,4 @@
     z-index: 2;
 }
 
-.test {
-    color: red;
-}
+.uk-slideshow-slides > *:not(.uk-active) *[class*="uk-animation"] { visibility: hidden; }
